# Monte-Carlo-Simulation

./: .gitignore  CLAUDE.md  README.md  plot_photon_trajectories.py  pyproject.toml
scripts/: run_simulation.py
src/mcsim/: __init__.py  cli.py  simulation.py  tissue.py
src/photon_mc/: __init__.py  __main__.py  medium.py  params.py  plotting.py  simulation.py
src/photon_mc/phase_functions/: __init__.py  henyey_greenstein.py  isotropic.py  mie.py  mueller.py
