[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcsim"
version = "0.1.0"
description = "Monte Carlo simulation of photon transport in biological tissue"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "miepython>=3.0",
]

[project.scripts]
mcsim-run = "mcsim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcsim"]
